# text-to-image

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
texttoimage/: manage.py
texttoimage/main/: admin.py  models.py  tasks.py  urls.py  views.py
texttoimage/main/migrations/: 0001_initial.py
texttoimage/texttoimage/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
